--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Hybrid Clock</title>
-		<link rel="stylesheet" type="text/css" href="style.scss">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 <body>
 <svg>
